# HERoEHS-ALICE-msgs

alice_msgs/: CMakeLists.txt  package.xml
alice_msgs/include/: SPLStandardMessage.h  robocup_struct.h
alice_msgs/msg/: BalanceParam.msg  FoundObject.msg  FoundObjectArray.msg  MoveCommand.msg  RoboCupGameControlData.msg  RoboCupGameControlReturnData.msg  RobotInfo.msg  TeamInfo.msg
alice_msgs/src/: robocup_struct.cpp
alice_operation_msgs/: CMakeLists.txt  package.xml
alice_operation_msgs/msg/: WalkingPathPlanner.msg
alice_walking_module_msgs/: CMakeLists.txt  package.xml
